<resources>
    <string name="app_name">GithubApiTest</string>
    <string name="days">%1$s Dias</string>
    <string name="user_repo">User repo</string>
    <string name="total_of_stars">Total de estrelas</string>
    <string name="_5000">5000</string>
    <string name="error_bd_consulting">erro ao consultar itens no banco de dados</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="open_issues">Open Issues</string>
    <string name="score">Score</string>
    <string name="data">Data</string>
    <string name="followers">Seguidores</string>
    <string name="order">Ordem</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="stars">Stars</string>
    <string name="favs">Favoritos</string>
    <string name="updatedbutton">Updated</string>
    <string name="apply_filters">Aplicar Filtros</string>
    <string name="save_fav">Salvar em favoritos</string>
    <string name="try_again">Tente novamente!</string>
    <string name="save_fav_sucess">Salvo com sucesso!</string>
    <string name="details">Detalhes</string>
    <string name="filters">Filtros</string>
    <string name="search_minimum">Pesquise com pelo menos 3 caracteres</string>
    <string name="repositories">Repositórios</string>
    <string name="search_by_name">Pesquisar por nome?</string>
    <string name="cannot_save_in_favs">não foi possível salvar em favoritos</string>
    <string name="no_conection_error">ops, parece que você está sem internet!</string>
</resources>
