<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimens2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_issue">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/dimens42dp"
            android:layout_height="@dimen/dimens42dp"
            android:layout_marginStart="@dimen/dimens32dp"
            android:layout_marginLeft="@dimen/dimens24dp"
            android:layout_marginTop="@dimen/dimens32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileImage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dimens10dp"
            android:layout_marginLeft="@dimen/dimens10dp"
            android:text="@string/user_repo"
            android:maxLength="19"
            android:textColor="@color/White"
            android:textSize="@dimen/dimens15sp"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintTop_toTopOf="@id/profileImage" />

        <TextView
            android:id="@+id/starsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="@dimen/dimens24dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/total_of_stars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/userName" />

        <TextView
            android:id="@+id/starValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/_5000"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="@id/starsText"
            app:layout_constraintTop_toBottomOf="@id/starsText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            android:background="#000000">

            <TextView
                android:id="@+id/DataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens20dp"
                android:layout_marginEnd="@dimen/dimens100dp"
                android:layout_marginRight="@dimen/dimens100dp"
                android:text="@string/data"
                android:textColor="@color/White"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/forksText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens4dp"
                android:layout_marginBottom="@dimen/dimens20dp"
                android:text="@string/_5000"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/DataText"
                app:layout_constraintStart_toStartOf="@id/DataText"
                app:layout_constraintTop_toBottomOf="@id/DataText" />

            <TextView
                android:id="@+id/forksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens20dp"
                android:text="@string/forks"
                android:textColor="@color/White"
                app:layout_constraintEnd_toStartOf="@id/DataText"
                app:layout_constraintStart_toEndOf="@id/followersText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forksValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens4dp"
                android:layout_marginBottom="@dimen/dimens20dp"
                android:text="@string/_5000"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/forksText"
                app:layout_constraintStart_toStartOf="@id/forksText"
                app:layout_constraintTop_toBottomOf="@id/forksText" />

            <TextView
                android:id="@+id/followersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens50dp"
                android:layout_marginLeft="@dimen/dimens50dp"
                android:layout_marginTop="@dimen/dimens20dp"
                android:text="@string/followers"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@id/forksText"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/followersValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens4dp"
                android:layout_marginBottom="@dimen/dimens20dp"
                android:text="@string/_5000"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/followersText"
                app:layout_constraintStart_toStartOf="@id/followersText"
                app:layout_constraintTop_toBottomOf="@id/followersText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


